<resources>
    <string name="app_name">CollegeRewards</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="title_home">Home</string>
    <string name="title_upcoming_events">Events</string>
    <string name="title_my_rewards">My Rewards</string>
    <string name="title_leaderboard">Leaderboard</string>

    <string name="testEvent1">Test Event 1</string>
    <string name="testEvent2">Test Event 2</string>
    <string name="testEvent3">Test Event 3</string>
    <string name="testEvent4">Test Event 4</string>
    <string name="testEvent5">Test Event 5</string>

    <string name="event_location_1">Test Location 1</string>
    <string name="event_date_1">3 March, 2024</string>

    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="register">Register</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="login">Log-In</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="rewards">Rewards</string>
    <string name="college_rewards">College Rewards</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="information">information</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <string name="pointcount">X points</string>
    <string name="nextrewardcount">X points till next Reward</string>
    <string name="admin_home">Admin Home</string>
    <string name="admin_events">Event Name</string>
    <string name="admin_events_title">Your Events</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="log_out">Log-Out</string>
    <string name="switch_to_list">Switch to List</string>
    <string name="switch_to_calendar">Switch to Calendar</string>

</resources>