<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FF0000"
        android:gravity="center"
        android:padding="16dp"
        android:background="#FFFFFF"/>

 <LinearLayout
     android:id="@+id/login_box"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@id/banner"
     android:layout_marginTop="48dp"
     android:orientation="vertical"
     android:padding="16dp"
     android:background="@color/cardview_light_background">


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/register"
      android:textColor="#FF0000"
      android:textSize="20sp" />
  <!-- first name text box -->
  <EditText
      android:id="@+id/firstname"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:hint="@string/firstname" />
  <!-- last name text box -->
  <EditText
      android:id="@+id/lastname"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:hint="@string/lastname" />
  <EditText
      android:id="@+id/email"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:hint="@string/email" />

  <!-- Username text box -->
  <EditText
      android:id="@+id/username"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:hint="@string/Username" />

  <!-- Password text box -->
  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:hint="@string/password"
      android:inputType="textPassword" />

  <!-- Enter button -->
  <Button
      android:id="@+id/enter_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:background="#FF0000"
      android:text="@string/enter"
      android:textColor="#FFFFFF" />
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center"
      android:layout_marginTop="8dp">

   <TextView
       android:id="@+id/login_link"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/login"
       android:textColor="#FF0000"
       android:textSize="16sp"/>


  </LinearLayout>

 </LinearLayout>
</RelativeLayout>
