<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="edu.missouri.collegerewards.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming_events"
        android:name="edu.missouri.collegerewards.ui.upcomingevents.UpcomingEventsFragment"
        android:label="@string/title_upcoming_events"
        tools:layout="@layout/fragment_upcoming_events" />

    <fragment
        android:id="@+id/navigation_my_rewards"
        android:name="edu.missouri.collegerewards.ui.myrewards.MyRewardsFragment"
        android:label="@string/title_my_rewards"
        tools:layout="@layout/fragment_my_rewards" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="edu.missouri.collegerewards.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />
</navigation>