<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@color/grey"
               android:layout_margin="30dp"
               android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/admin_home"
                    android:fontFamily="@font/graduate"
                    android:textAlignment="center"
                    android:shadowColor="@color/black"
                    android:shadowDx="7"
                    android:shadowDy="2"
                    android:shadowRadius="1.0"
                    android:textColor="@color/yellow"
                    android:textSize="48sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <Button
                        android:id="@+id/Add_event_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add Event"
                        android:textColor="@color/black"
                        android:layout_margin="20dp"/>
                    <Button
                        android:id="@+id/edit_event_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Edit Event"
                        android:textColor="@color/black"
                        android:layout_margin="20dp"/>
                </LinearLayout>
                <EditText
                    android:id="@+id/event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_margin="15dp"
                    android:hint="@string/admin_events"
                    android:autofillHints="name"/>
                <EditText
                    android:id="@+id/event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_margin="15dp"
                    android:hint="@string/date"
                    android:autofillHints="name"/>
                <EditText
                    android:id="@+id/event_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_margin="15dp"
                    android:hint="@string/location"
                    android:autofillHints="postalAddress"/>
                <EditText
                    android:id="@+id/event_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:layout_margin="15dp"
                    android:hint="Event Image"
                    android:autofillHints=""/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:layout_margin="30dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/admin_events_title"
                    android:fontFamily="@font/graduate"
                    android:shadowColor="@color/yellow"
                    android:shadowDx="7"
                    android:shadowDy="2"
                    android:shadowRadius="1.0"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/Admin_events_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>






        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>