<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="30dp"
                android:background="@color/grey"
                >

                <TextView
                    android:id="@+id/userhello"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="Hello, User"
                    android:fontFamily="@font/graduate"
                    android:textAlignment="center"
                    android:shadowColor="@color/black"
                    android:shadowDx="7"
                    android:shadowDy="2"
                    android:shadowRadius="1.0"
                    android:textColor="@color/yellow"
                    android:textSize="48sp"
                    android:layout_gravity="center_horizontal"  />
                <TextView
                    android:id="@+id/homepointcount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pointcount"
                    android:textSize="40sp"
                    android:layout_margin="15dp"
                    android:layout_gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/nextrewardcount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/nextrewardcount"
                    android:layout_gravity="center_horizontal"
                    android:textSize="24sp"
                    android:layout_margin="15dp"/>
                <Button
                    android:id="@+id/logout_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:textSize="24sp"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/yellow"
                    android:backgroundTint="@color/grey"
                    android:layout_margin="15dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey"
                android:layout_margin="30dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_upcoming_events"
                    android:fontFamily="@font/graduate"
                    android:shadowColor="@color/yellow"
                    android:shadowDx="7"
                    android:shadowDy="2"
                    android:shadowRadius="1.0"
                    android:textSize="30sp"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/Nexteventhomeview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>
        </LinearLayout>





   </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>